--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "Tristan Bagot",
-  "description": "Kirby Starter Kit",
+  "name": "",
+  "description": "catzdoggy",
   "version": "1.0.0",
   "dependencies": {
     "jquery": "latest",
