--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "",
+  "name": "catzdoggy",
   "description": "catzdoggy",
   "version": "1.0.0",
   "dependencies": {
-    "jquery": "latest",
+    "jquery": "~2.1.1",
     "history.js": "latest",
     "normalize-css": "latest"
   }
