--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "history.js": "latest",
-    "normalize-css": "latest"
+    "normalize-css": "latest",
+    "bigtext": "^0.1.8",
+    "scrollForever": "https://github.com/kujian/scrollForever.git",
+    "flickity": "^2.0.5",
+    "lazysizes": "^2.0.7"
   }
 }
