--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
     "bigtext": "^0.1.8",
     "scrollForever": "https://github.com/kujian/scrollForever.git",
     "flickity": "^2.0.5",
-    "lazysizes": "^2.0.7"
+    "lazysizes": "^2.0.7",
+    "viewport-units-buggyfill": "^0.6.0",
+    "plyr": "^2.0.11"
   }
 }
